--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -1,7 +1,7 @@
 ---
 import { fetchProductVariants } from "../lib/shopify.server";
 
-import logo from "../img/logoPeque.png";
+import logo from "../img/logopeque.png";
 import testimonio1 from "../img/testimonio1.jpeg";
 import testimonio2 from "../img/testimonio2.jpeg";
 import pareja from "../img/pareja.jpeg";
