--- a/src/components/Waves.astro
+++ b/src/components/Waves.astro
@@ -1,5 +1,5 @@
 <div id="shopify-section-template--19375417524373__section_divider_3gyr6g" class="shopify-section">
-  <style data-shopify="">
+  <style data-shopify="" is:global>
     .section-divider-template--19375417524373__section_divider_3gyr6g {
       transform: scaleX(1) scaleY(1);
     }
