--- a/src/pages/privacyPolicy.astro
+++ b/src/pages/privacyPolicy.astro
@@ -1,15 +1,18 @@
 ---
+import Navbar from "@/components/Navbar.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
+    <Navbar></Navbar>
     <main
         id="MainContent"
         class="container mx-auto px-96 py-16"
         role="main"
         tabindex="-1"
     >
-        <div class="px-24 py-16">
+    
+        <div class="px-24 ">
             <div class="shopify-policy__title">
                 <h1 class="text-center mb-6 text-5xl">Política de privacidad</h1>
             </div>
