--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,9 +2,9 @@
 import SpeedInsights from "@vercel/speed-insights/astro";
 import "../styles/global.css";
 import Navbar from "../components/Navbar.astro";
-import Banner from "../components/Banner.astro";
-import logoLetraViva from "../img/logo_letra_viva.png";
-import Footer from "@/components/footer.astro";
+import Footer from "@/components/Footer.astro";
+
+
 
 ---
 
