Actualización de visualización de footer

--- a/src/components/ButtonWhatsApp.astro
+++ b/src/components/ButtonWhatsApp.astro
@@ -1,8 +1,7 @@
 ---
 // WhatsAppFloat.astro
 const whatsappNumber = "573243798334"; // Cambia por tu número
-const message =
-  "👋🏼 Hola, vengo de la web y quiero pedir mi canción personalizada 🎶 ✨";
+const message = "👋🏼 Hola, vengo de la web y quiero pedir mi canción personalizada 🎶 ✨";
 ---
 
 <!-- Popup del chat -->
