--- a/src/pages/contactInformation.astro
+++ b/src/pages/contactInformation.astro
@@ -1,4 +1,6 @@
 ---
+import ButtonWhatsApp from "@/components/ButtonWhatsApp.astro";
+import Footer from "@/components/Footer.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
@@ -284,4 +286,6 @@ import Layout from "@/layouts/Layout.astro";
             </div>
         </div>
     </div>
+	<ButtonWhatsApp/>
+	<Footer />
 </Layout>
