--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Music from '../components/Music.astro';
 import Questions from '../components/Questions.astro';
 import ButtonWhatsApp from '../components/ButtonWhatsApp.astro';
 import Navbar from '../components/Navbar.astro';
+import Footer from '@/components/Footer.astro';
 ---
 
 <Layout>	
@@ -25,5 +26,6 @@ import Navbar from '../components/Navbar.astro';
 	<Questions/>
 
 	
-	<ButtonWhatsApp
+	<ButtonWhatsApp/>
+	<Footer />
 </Layout>
