--- a/src/pages/privacyPolicy.astro
+++ b/src/pages/privacyPolicy.astro
@@ -1,6 +1,8 @@
 ---
 import Navbar from "@/components/Navbar.astro";
 import Layout from "../layouts/Layout.astro";
+import ButtonWhatsApp from "@/components/ButtonWhatsApp.astro";
+import Footer from "@/components/Footer.astro";
 ---
 
 <Layout>
@@ -677,4 +679,6 @@ import Layout from "../layouts/Layout.astro";
             </p>
         </div>
     </div>
+    <ButtonWhatsApp/>
+	<Footer/>
 </Layout>
