--- a/src/pages/refundPolicy.astro
+++ b/src/pages/refundPolicy.astro
@@ -1,4 +1,6 @@
 ---
+import ButtonWhatsApp from "@/components/ButtonWhatsApp.astro";
+import Footer from "@/components/Footer.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
@@ -440,4 +442,6 @@ import Layout from "@/layouts/Layout.astro";
             </div>
         </div>
     </div>
+    <ButtonWhatsApp/>
+	<Footer/>
 </Layout>
