--- a/src/pages/card/[orderId].astro
+++ b/src/pages/card/[orderId].astro
@@ -18,7 +18,7 @@ try {
     
     metaTags = {
       title: `${orderData.metafields.titulo_cancion} - Letra Viva`,
-      description: `Canción personalizada para ${orderData.metafields.para_quien_es} de parte de ${orderData.metafields.de_quien_es}`,
+      description: `Canción personalizada ${orderData.metafields.para_quien_es} parte de ${orderData.metafields.de_quien_es}`,
       image: orderData.metafields.targeta_digital_url || "/og-image.jpg"
     };
   }
